screego/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: screego
  namespace: screego
spec:
  selector:
    app: screego
  ports:
    - port: 5050
      targetPort: 5050
