screego/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: screego
  namespace: screego
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - screen.fos.gg
      secretName: screego-tls
  rules:
    - host: screen.fos.gg
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: screego
                port:
                  number: 5050
